crates/ryft-macros-tests/tests/parameters/error_tuples.stderr
error[E0277]: the trait bound `usize: Parameterized<Placeholder>` is not satisfied
 --> tests/parameters/error_tuples.rs:3:10
  |
3 | #[derive(Parameterized)]
  |          ^^^^^^^^^^^^^ the trait `Parameterized<Placeholder>` is not implemented for `usize`
  |
  = help: the following other types implement trait `Parameterized<P>`:
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
            (T0, T1, T2, T3, T4, T5)
            (T0, T1, T2, T3, T4, T5, T6)
            (T0, T1, T2, T3, T4, T5, T6, T7)
          and $N others
  = note: required for `(Placeholder, usize)` to implement `Parameterized<Placeholder>`
note: required for `NestedVecOfTuples<Placeholder>` to implement `ParameterizedFamily<Placeholder>`
 --> tests/parameters/error_tuples.rs:3:10
  |
3 | #[derive(Parameterized)]
  |          ^^^^^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
  = note: this error originates in the derive macro `Parameterized` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: Parameterized<Placeholder>` is not satisfied
 --> tests/parameters/error_tuples.rs:4:8
  |
4 | struct NestedVecOfTuples<P: Parameter> {
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Parameterized<Placeholder>` is not implemented for `usize`
  |
  = help: the following other types implement trait `Parameterized<P>`:
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
            (T0, T1, T2, T3, T4, T5)
            (T0, T1, T2, T3, T4, T5, T6)
            (T0, T1, T2, T3, T4, T5, T6, T7)
          and $N others
  = note: required for `(Placeholder, usize)` to implement `Parameterized<Placeholder>`
note: required for `NestedVecOfTuples<Placeholder>` to implement `ParameterizedFamily<Placeholder>`
 --> tests/parameters/error_tuples.rs:3:10
  |
3 | #[derive(Parameterized)]
  |          ^^^^^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
  = note: this error originates in the derive macro `Parameterized` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: Parameterized<Placeholder>` is not satisfied
 --> tests/parameters/error_tuples.rs:3:10
  |
3 | #[derive(Parameterized)]
  |          ^^^^^^^^^^^^^ the trait `Parameterized<Placeholder>` is not implemented for `usize`
  |
  = help: the following other types implement trait `Parameterized<P>`:
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
            (T0, T1, T2, T3, T4, T5)
            (T0, T1, T2, T3, T4, T5, T6)
            (T0, T1, T2, T3, T4, T5, T6, T7)
          and $N others
  = note: required for `(Placeholder, usize)` to implement `Parameterized<Placeholder>`
note: required for `NestedVecOfTuples<Placeholder>` to implement `ParameterizedFamily<Placeholder>`
 --> tests/parameters/error_tuples.rs:3:10
  |
3 | #[derive(Parameterized)]
  |          ^^^^^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
note: required by a bound in `ryft::ParameterizedFamily::To`
 --> $WORKSPACE/crates/ryft-core/src/parameters.rs
  |
  |     type To: Parameterized<P, Family = Self, ParameterStructure = <Self as ParameterizedFamily<Placeholder>>::To>
  |          -- required by a bound in this associated type
  |     where
  |         Self: ParameterizedFamily<Placeholder>;
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ParameterizedFamily::To`
  = note: this error originates in the derive macro `Parameterized` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: Parameterized<Placeholder>` is not satisfied
 --> tests/parameters/error_tuples.rs:3:10
  |
3 | #[derive(Parameterized)]
  |          ^^^^^^^^^^^^^ the trait `Parameterized<Placeholder>` is not implemented for `usize`
  |
  = help: the following other types implement trait `Parameterized<P>`:
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
            (T0, T1, T2, T3, T4, T5)
            (T0, T1, T2, T3, T4, T5, T6)
            (T0, T1, T2, T3, T4, T5, T6, T7)
          and $N others
  = note: required for `(Placeholder, usize)` to implement `Parameterized<Placeholder>`
note: required for `NestedVecOfTuples<Placeholder>` to implement `ParameterizedFamily<Placeholder>`
 --> tests/parameters/error_tuples.rs:3:10
  |
3 | #[derive(Parameterized)]
  |          ^^^^^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
note: required by a bound in `ryft::Parameterized::To`
 --> $WORKSPACE/crates/ryft-core/src/parameters.rs
  |
  |     type To<T: Parameter>: Parameterized<T, Family = Self::Family, ParameterStructure = Self::ParameterStructure>
  |          -- required by a bound in this associated type
...
  |         Self::Family: ParameterizedFamily<T>;
  |                       ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Parameterized::To`
  = note: this error originates in the derive macro `Parameterized` (in Nightly builds, run with -Z macro-backtrace for more info)
